added data and minor fixes

--- a/index.html
+++ b/index.html
@@ -16,55 +16,133 @@
 <body class="d-flex flex-column h-100">
     <div class="container" id="main-content">
         <!-- HEADER -->
-        <div class="text-center">
+        <div class="text-center" id="header-section">
             <img src="images/avatar.png" alt="Avatar" class="img-thumbnail img-fluid mx-auto avatar">
             <h2>Eric Ballou</h2>
             <p class="lead">
-                I am an undergraduate student at <a href="https://www.umass.edu" target="_blank">UMass Amherst</a> 
-                pursuing a Bachelor's degree in Computer Science expected to graduate in Spring 2022.
+                Senior Computer Science Student @ UMass Amherst
             </p>
         </div>
-        
+
+        <!-- ABOUT ME -->
+        <div class="section" id="about-section">
+            <h4 class="text-center">About Me</h4>
+            <div>
+                <p class="indent">
+                    I am an undergraduate student at <a href="https://www.umass.edu" target="_blank">UMass Amherst</a> 
+                    pursuing a Bachelor's degree in Computer Science expected to graduate in Spring 2022. I enjoy 
+                    watching television shows, listening to music, playing/watching videogames (e-sports), and watching
+                    basketball.
+                </p>
+            </div>
+        </div>
+
+        <!-- EDUCATION -->
+        <div class="section container-fluid container-constrained" id="education-section">
+            <h4 class="text-center">Education</h4>
+            <div class="row">
+                <div class="col-6 col-sm-8">
+                    <h5>University of Massachusetts Amherst</h5>
+                    <h6>GPA: 3.746, Dean's List Honors (Spring '19 -)</h6>
+                </div>
+                <div class="col-4 col-sm-3">
+                    <h6 class="text-right">Amherst, MA</h6>
+                    <h6 class="text-right">2018 - 2022</h6>
+                    <p></p>
+                </div>
+            </div>
+            <div class="col-9 col-sm-10">
+                <h6>
+                    <em>College of Information and Computer Sciences</em>
+                </h6>
+                <h6>
+                    Bachelor of Science, Computer Science
+                </h6>
+            </div>
+            <div class="row mt-xl-5">
+                <div class="col-6 col-sm-8">
+                    <h5>Ware High School</h5>
+                    <h6>GPA: 3.96</h6>
+                </div>
+                <div class="col-4 col-sm-3">
+                    <h6 class="text-right">Ware, MA</h6>
+                    <h6 class="text-right">2014 - 2018</h6>
+                    <p></p>
+                </div>
+            </div>
+        </div>
 
         <!-- COURSES -->
         <div class="section" id="courses-section">
-            <h4 class="text-center">Coursework</h4>
-            <div>
-                <h5>Sample Course 1</h5>
-                <p>
-                    Lorem ipsum
-                </p>
-            </div>
-            <div>
-                <h5>Sample Course 2</h5>
-                <p>
-                    Lorem ipsum
-                </p>
-            </div>
-            <div>
-                <h5>Sample Course 2</h5>
-                <p>
-                    Lorem ipsum
-                </p>
+            <h4 class="text-center">Relevant Coursework</h4>
+            <div class=>
+                <div>
+                    <h5>Web Programming (CS326)</h5>
+                    <h6 class="">Projects: </h6>
+                    <p class="indent">
+                        <a href="https://www.youtube.com/watch?v=zvhawDTPxRU" target="_blank">Productivity Hub</a>
+                    </p>
+                    <div class="col-9 col-sm-10 text-left">
+                        <div class="skills-block">HTML</div>
+                        <div class="skills-block">CSS</div>
+                        <div class="skills-block">JavaScript</div>
+                        <div class="skills-block">SQL</div>
+                    </div>
+                </div>
+                <div class="mt-xl-5">
+                    <h5>Search Engines (CS446)</h5>
+                    <h6 class="">Projects: </h6>
+                    <p class="indent">
+                        Search Engine
+                    </p>
+                    <div class="col-9 col-sm-10 text-left">
+                        <div class="skills-block">Java</div>
+                    </div>
+                </div>
+                <div class="mt-xl-5">
+                    <h5>Computer Systems Principles (CS230)</h5>
+                    <h6 class="">Projects: </h6>
+                    <p class="indent">
+                        <a href="https://www.youtube.com/watch?v=49A3aoeDmIo" target="_blank">Hey! That's My Fish!</a>
+                    </p>
+                    <p class="indent">
+                        <a href="https://www.youtube.com/watch?v=OFa692UnTUc" target="_blank">Adventure Game</a>
+                    </p>
+                    <div class="col-9 col-sm-10 text-left">
+                        <div class="skills-block">C</div>
+                    </div>
+                </div>
+                <div class="mt-xl-5">
+                    <h5>Game Programming (CS576)</h5>
+                    <h6 class="">Projects: </h6>
+                    <p class="indent">
+                        <a href="#" target="_blank">Truck Game</a>
+                    </p>
+                    <p class="indent">
+                        <a href="#" target="_blank">Pendulum Simulator</a>
+                    </p>
+                    <div class="col-9 col-sm-10 text-left">
+                        <div class="skills-block">C#</div>
+                        <div class="skills-block">Unity</div>
+                    </div>
+                </div>
             </div>
         </div>
 
         <!-- PROJECTS -->
         <div class="section" id="projects-section">
             <h4 class="text-center">Projects</h4>
-            <div>
-                <h5>Sample Project 1</h5>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-                    laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-                    non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <div class=>
+                <h5>Personal Website</h5>
+                <p class="indent">
+                    Hosted under GitHub pages, my <a href="https://emballou.github.io/" target="_blank">website</a>
+                    (this one!) is my first website outside of coursework. It's main purpose is to familiarize 
+                    myself with Bootstrap, as well as further practice previous skills such as HTML, CSS, and JavaScript.
                 </p>
             </div>
-            <div>
+            <div class="mt-xl-5">
                 <h5>Sample Project 2</h5>
-                <p>
+                <p class="indent">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
@@ -78,7 +156,7 @@
         <div class="section" id="skills-section">
             <h4 class="text-center">Skills</h4>
             <div>
-                <p>
+                <p class="no-indent">
                     Java, C, C++, C#, JavaScript, HTML, CSS, SQL, PostgreSQL
                 </p>
             </div>
