--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100">
+<html lang="en" class="h-100" data-theme="light">
 <head>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,15 +18,6 @@
 <body class="d-flex flex-column h-100">
     <div class="container" id="main-content">
         <!-- HEADER -->
-        <!-- 
-        <div class="content-row row" id="header-section">
-            <img src="images/irl.jpg" alt="Avatar" class="img-md hidden-xs img-responsive img-thumbnail avatar">
-            <h2>Eric Ballou</h2>
-            <p class="lead">
-                Senior Computer Science Student @ UMass Amherst
-            </p>
-        </div>
-        -->
         <div class="header1">
             <div class="avatar1">
               <img src="images/irl.jpg" alt="Avatar" class="img-md hidden-xs img-responsive avatar"/>
@@ -34,6 +25,19 @@
             <div class="info1">
                 <h2>Eric Ballou</h2>
                 <p class="lead">Senior Computer Science Student @ UMass Amherst</p>
+                <div class="social-medias">
+                    <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="hvr-underline-reveal">
+                        <i class="fa fa-linkedin"></i>LinkedIn
+                    </a>
+                    <span class="separator">•</span>
+                    <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="hvr-outline-out">
+                        <i class="fa fa-github-alt"></i>GitHub
+                    </a>
+                    <span class="separator">•</span>
+                    <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="hvr-underline-reveal">
+                        <i class="fa fa-envelope"></i>Email
+                    </a>
+                </div>
             </div>
         </div>
         <hr>
@@ -178,30 +182,19 @@
         </div>
 
         <!-- DARK MODE -->
-        <div id="theme-switch">
-            <label class="switch">
+        <div>
+            <label class="switch" id="theme-switch">
                 <input type="checkbox">
                 <span class="slider round"></span>
             </label>
         </div>
+
     </div>
 
     <div class="text-center">
         <a href="#main-content"> 
             <div class="fa fa-angle-up"></div>
         </a>
-    </div>
-
-    <hr>
-    <!-- CONTACT -->
-    <div class="section" id="contact-section">
-        <h4 class="text-center">Contact</h4>
-        <!-- Social Media -->
-        <div class="text-center">
-            <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="fa fa-linkedin"></a>
-            <a href="https://github.com/emballou" target="_blank" class="fa fa-github"></a>
-            <a href="#" class="fa fa-google"></a> 
-        </div>
     </div>
     
     <!-- FOOTER -->
@@ -210,7 +203,8 @@
             <span>© 2021 Eric Ballou</span>
         </div>
     </footer>
+
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
