fixes to projects

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </div>
         <hr>
+
         <!-- ABOUT ME -->
         <div class="section" id="about-section">
             <h4 class="text-center">About Me</h4>
@@ -97,7 +98,7 @@
         </div>
 
         <div class="text-center">
-            <a href="#courses-section"> 
+            <a href="#projects-section"> 
                 <div class="fa fa-angle-down"></div>
             </a>
         </div>
@@ -108,23 +109,23 @@
             <h4 class="text-center">Projects</h4>
 
             <!-- Website -->
-            <div class=>
+            <div class="project">
                 <h5>Personal Website</h5>
                 <p class="indent">
                     Hosted under GitHub pages, my <a href="https://emballou.github.io/" target="_blank">website</a>
                     (this one!) is my first website outside of coursework. It's main purpose is to familiarize 
                     myself with Bootstrap, as well as further practice previous skills such as HTML, CSS, and JavaScript.
                 </p>
-            </div>
-            <div class="col-9 col-sm-10 text-left">
-                <div class="skills-block purple">Personal</div>
-                <div class="skills-block maroon">HTML</div>
-                <div class="skills-block maroon">CSS</div>
-                <div class="skills-block">JavaScript</div>
+                <div class="col-9 col-sm-10 text-left">
+                    <div class="skills-block purple">Personal</div>
+                    <div class="skills-block maroon">HTML</div>
+                    <div class="skills-block maroon">CSS</div>
+                    <div class="skills-block">JavaScript</div>
+                </div>
             </div>
 
             <!-- PolyTrucker -->
-            <div class="mt-xl-5">
+            <div class="project mt-xl-5">
                 <h5>PolyTrucker</h5>
                 <p class="indent">
                     PolyTrucker is an arcade low-poly truck driving game. The game features missions 
@@ -144,7 +145,7 @@
             </div>
 
             <!-- Productivity Hub -->
-            <div class="mt-xl-5">
+            <div class="project mt-xl-5">
                 <h5>Productivity Hub</h5>
                 <p class="indent">
                     Productivity Hub is a scheduling website used to organize the various logistical needs of a
