added now page/color scheme updates

--- a/index.html
+++ b/index.html
@@ -47,21 +47,50 @@
             <h4 class="text-center">About Me</h4>
             <div>
                 <p class="indent">
-                    I am an undergraduate student at <a href="https://www.umass.edu" target="_blank">UMass Amherst</a> 
-                    pursuing a Bachelor's degree in Computer Science expected to graduate in Spring 2022. I enjoy 
-                    watching television shows, listening to music, playing/watching videogames (e-sports), and watching
-                    basketball.
+                    I am an undergraduate student at <a href="https://www.umass.edu" target="_blank" class="outline">UMass Amherst</a> 
+                    pursuing a degree in Computer Science, expected to graduate in Spring 2022. Professionally, I am interested in
+                    software engineering, database administration, and game development. In my free time I enjoy watching television series, 
+                    listening to music, playing/watching videogames, and following the NBA.
                 </p>
             </div>
         </div>
+        
+        <div class="text-center">
+            <a href="#now-section"> 
+                <div class="fa fa-angle-down"></div>
+            </a>
+        </div>
+        <hr>
+
+        <div class="section" id="now-section">
+            <h4 class="text-center">What's Now?</h4>
+            <div class="text-center extra"><a href="https://nownownow.com/about">[learn more]</a></div>
+            <div>
+                <h5> Work </h5>
+                <p class="indent">
+                    I am actively searching for job positions after graduation. In terms of projects, I am always updating
+                    this site and plan to upgrade it over the next few months to allow for a more responsive design. Otherwise,
+                    I am supremely interested in game development, and, more specifically, UI design. I have also found myself
+                    messing around with 3D modeling via Blender 3.0 and plan to use what I learn to further my game development 
+                    skills.
+                </p>
+
+                <h5> School </h5>
+                <p class="indent">
+                    Having just finished up my fall semester, my eyes are set on life after school and ending
+                    my schooling career strong. 
+                </p>
+            </div>
+        </div>
+
 
         <div class="text-center">
             <a href="#education-section"> 
                 <div class="fa fa-angle-down"></div>
             </a>
         </div>
-
         <hr>
+
         <!-- EDUCATION -->
         <div class="section container-fluid container-constrained" id="education-section">
             <h4 class="text-center">Education</h4>
@@ -135,7 +164,7 @@
                     as a group project in CS576. In terms of production, I was solely responsible for the UI
                     of the game, including but not limited to the main menu, pause menu and the in-game HUD.
                     I was also responsible for creating the animal-based AI for the game, which acts as an enemy
-                    AI in regards to the game itself.
+                    that wanders around and runs away from the truck's horn.
                 </p>
                 <div class="col-9 col-sm-10 text-left">
                     <div class="skills-block purple">CS576</div>
