fixed header using bootstrap

--- a/index.html
+++ b/index.html
@@ -17,33 +17,44 @@
 
 <body class="d-flex flex-column h-100">
     <div class="container" id="main-content">
-        <!-- HEADER -->
-        <div class="header1">
-            <div class="avatar1">
-              <img src="images/irl.jpg" alt="Avatar" class="img-md hidden-xs img-responsive avatar"/>
-            </div>
-            <div class="info1">
-                <h2>Eric Ballou</h2>
-                <p class="lead">Senior Computer Science Student @ UMass Amherst</p>
-                <div class="social-medias">
-                    <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="hvr-underline-reveal">
-                        <i class="fa fa-linkedin"></i>LinkedIn
-                    </a>
-                    <span class="separator">•</span>
-                    <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="hvr-outline-out">
-                        <i class="fa fa-github-alt"></i>GitHub
-                    </a>
-                    <span class="separator">•</span>
-                    <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="hvr-underline-reveal">
-                        <i class="fa fa-envelope"></i>Email
-                    </a>
+        <div class="container p-3">
+            <div class="row d-flex flex-wrap align-items-center">
+                <div class="offset-3 col-6 
+                offset-sm-4 col-sm-4 
+                offset-lg-1 col-lg-2">
+                    <img src="images/irl.jpg" class="rounded-circle rounded-circle-border img-fluid">
                 </div>
+                <div class="col-12 col-sm-8 col-md-9 col-lg-9 col-xl-7 align-items-center">
+                    <div class="text-left">
+                        <h2 class="header">Eric Ballou</h2>
+                    </div>
+                    <div class="text-left">
+                        <p class="lead">Computer Science Student @ UMass Amherst</p>
+                    </div>
+                    <div class="text-left">
+                        <div class="social-medias">
+                            <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="hvr-underline-reveal">
+                                <i class="fa fa-linkedin"></i>LinkedIn
+                            </a>
+                            <span class="separator">•</span>
+                            <a href="https://github.com/emballou/" target="_blank" class="hvr-outline-out">
+                                <i class="fa fa-github-alt"></i>GitHub
+                            </a>
+                            <span class="separator">•</span>
+                            <a href="mailto:eballou18@gmail.com/" target="_blank" class="hvr-underline-reveal">
+                                <i class="fa fa-envelope"></i>Email             
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-1"></div>
             </div>
         </div>
         <hr>
+        
 
         <!-- ABOUT ME -->
-        <div class="section" id="about-section">
+        <div class="section p-3" id="about-section">
             <h4 class="text-center">About Me</h4>
             <div>
                 <p class="indent">
@@ -62,23 +73,38 @@
         </div>
         <hr>
 
-        <div class="section" id="now-section">
+        <!-- WHAT'S NOW -->
+        <div class="section p-3" id="now-section">
             <h4 class="text-center">What's Now?</h4>
             <div class="text-center extra"><a href="https://nownownow.com/about">[learn more]</a></div>
             <div>
                 <h5> Work </h5>
                 <p class="indent">
+                    <ul>
+                        <li> 1 </li>
+                        <li> 2 </li>
+                        <li> 3 </li>
+                    </ul>
+                    <!--
                     I am actively searching for job positions after graduation. In terms of projects, I am always updating
                     this site and plan to upgrade it over the next few months to allow for a more responsive design. Otherwise,
                     I am supremely interested in game development, and, more specifically, UI design. I have also found myself
                     messing around with 3D modeling via Blender 3.0 and plan to use what I learn to further my game development 
                     skills.
+                    -->
                 </p>
 
                 <h5> School </h5>
                 <p class="indent">
+                    <ul>
+                        <li> 1 </li>
+                        <li> 2 </li>
+                        <li> 3 </li>
+                    </ul>
+                    <!--
                     Having just finished up my fall semester, my eyes are set on life after school and ending
                     my schooling career strong. 
+                    -->
                 </p>
             </div>
         </div>
@@ -92,7 +118,7 @@
         <hr>
 
         <!-- EDUCATION -->
-        <div class="section container-fluid container-constrained" id="education-section">
+        <div class="section p-3 container-fluid container-constrained" id="education-section">
             <h4 class="text-center">Education</h4>
             <div class="row">
                 <div class="col-6 col-sm-8">
@@ -134,7 +160,7 @@
 
         <hr>
         <!-- PROJECTS -->
-        <div class="section" id="projects-section">
+        <div class="section p-3" id="projects-section">
             <h4 class="text-center">Projects</h4>
 
             <!-- Website -->
@@ -202,7 +228,7 @@
 
         <hr>
         <!-- SKILLS -->
-        <div class="section" id="skills-section">
+        <div class="section p-3" id="skills-section">
             <h4 class="text-center">Skills</h4>
             <div>
                 <p class="no-indent">
