added color, fixed slider, page changes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-100" data-theme="light">
+<html lang="en" class="h-100" data-theme="dark">
 <head>
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,15 +40,15 @@
                     </div>
                     <div class="text-center">
                         <div class="social-medias">
-                            <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="hvr-underline-reveal">
+                            <a href="https://www.linkedin.com/in/eric-ballou-777392198/" target="_blank" class="social-media-button">
                                 <i class="fa fa-linkedin"></i>LinkedIn
                             </a>
                             <span class="separator">•</span>
-                            <a href="https://github.com/emballou/" target="_blank" class="hvr-outline-out">
+                            <a href="https://github.com/emballou/" target="_blank" class="social-media-button">
                                 <i class="fa fa-github-alt"></i>GitHub
                             </a>
                             <span class="separator">•</span>
-                            <a href="mailto:eballou18@gmail.com/" target="_blank" class="hvr-underline-reveal">
+                            <a href="mailto:eballou18@gmail.com/" target="_blank" class="social-media-button">
                                 <i class="fa fa-envelope"></i>Email             
                             </a>
                         </div>
